adding posting functionality - just about finished

--- a/jboard.html
+++ b/jboard.html
@@ -1,14 +1,15 @@
 <head>
-  <title>jboard</title>
+  <title>No Office Needed | Find and post flexible JavaScript jobs</title>
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Post your flexible JavaScript related jobs on No Office Needed free of charge today">
+    <!--<link rel="icon" href="/favicon.ico">-->
+
+    <link href="/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/fonts.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+<!-- templates get rendered in here -->
 
-  {{> hello}}
 </body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
