job posting detail page

--- a/client/create-posting.html
+++ b/client/create-posting.html
@@ -38,6 +38,7 @@
     <input name="company" type="text" class="form-control" placeholder="Company Name"  required /><br>
     <input name="headquarters" type="text" class="form-control" placeholder="Company Headquarters"  required /><br>
     <input name="email" type="text" class="form-control" placeholder="Company Email"  required /><br>
+    <input name="website" type="text" class="form-control" placeholder="Company Website"  required /><br>
     <button class="btn btn-primary" type="submit">Post now!</button>
   </form>
   <div class="alert alert-success status-notification" role="alert">
