Adding list jobs by Category

--- a/client/create-posting.html
+++ b/client/create-posting.html
@@ -26,14 +26,14 @@
       <option value="$180k">$180k</option>
     </select><br>
     <select name="category" class="form-control">
-      <option value="front-end javascript">Front-end JavaScript</option>
-      <option value="back-end javascript">Back-end JavaScript</option>
-      <option value="isomorphic javascript">Isomorphic JavaScript</option>
-      <option value="miscellaneous">Miscellaneous</option>
-      <option value="design">Design</option>
-      <option value="sales/marketing">Sales/Marketing</option>
-      <option value="help desk/support">Help Desk/Support</option>
-      <option value="system admin">System Admin</option>
+      <option value="front_end_jobs">Front-end JavaScript</option>
+      <option value="back_end_jobs">Back-end JavaScript</option>
+      <option value="fullstack_jobs">Isomorphic JavaScript</option>
+      <option value="miscellaneous_jobs">Miscellaneous</option>
+      <option value="design_jobs">Design</option>
+      <option value="sales_marketing_jobs">Sales/Marketing</option>
+      <option value="help_desk_support_jobs">Help Desk/Support</option>
+      <option value="system_admin_jobs">System Admin</option>
     </select><br>
     <input name="company" type="text" class="form-control" placeholder="Company Name"  required /><br>
     <input name="headquarters" type="text" class="form-control" placeholder="Company Headquarters"  required /><br>
