--- a/jboard.html
+++ b/jboard.html
@@ -1,5 +1,5 @@
 <head>
-  <title>No Office Needed | Find and post flexible JavaScript jobs</title>
+  <title>{{pageTitle}}</title>
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Post your flexible JavaScript related jobs on No Office Needed free of charge today">
