Fixed link color and hover state.

--- a/client/job-posting.html
+++ b/client/job-posting.html
@@ -12,7 +12,7 @@
       <p>{{requirements}}</p>
       <h5>About the company</h5>
       <p>They're located in {{headquarters}} and you can visit their website
-        <a href="{{website}}" target="_blank">{{website}}</a> for more info
+        <a class="site-link" href="{{website}}" target="_blank">{{website}}</a> for more info
       </p>
       <h5>Where to apply</h5>
       <p>Send your resume to {{email}}</p>
