--- a/client/create-posting.html
+++ b/client/create-posting.html
@@ -9,21 +9,11 @@
       <option value="full-time">Full-time</option>
     </select><br>
     <select name="salary" class="form-control">
-      <option value="$40k">$40k</option>
-      <option value="$50k">$50k</option>
-      <option value="$60k">$60k</option>
-      <option value="$70k">$70k</option>
-      <option value="$80k">$80k</option>
-      <option value="$90k">$90k</option>
-      <option value="$100k">$100k</option>
-      <option value="$110k">$110k</option>
-      <option value="$120k">$120k</option>
-      <option value="$130k">$130k</option>
-      <option value="$140k">$140k</option>
-      <option value="$150k">$150k</option>
-      <option value="$160k">$160k</option>
-      <option value="$170k">$170k</option>
-      <option value="$180k">$180k</option>
+      <option value="$40k - $65k">$40k - $65k</option>
+      <option value="$65k - $90k">$65k - $90k</option>
+      <option value="$90k - $120k">$90k - $120k</option>
+      <option value="$120k - $150k">$120k - $150k</option>
+      <option value="$150k - $200k">$150k - $200k</option>
     </select><br>
     <select name="category" class="form-control">
       <option value="front_end_jobs">Front-end JavaScript</option>
