--- a/jboard.html
+++ b/jboard.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Post your flexible JavaScript related jobs on No Office Needed free of charge today">
   <!--<link rel="icon" href="/favicon.ico">-->
+  <meta name="fragment" content="!">
   <link href="/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="/fonts.min.css" rel="stylesheet" type="text/css">
 
