Remove insecure and autopublish packages to deny console inserts

--- a/jboard.html
+++ b/jboard.html
@@ -1,5 +1,5 @@
 <head>
-  <title>{{pageTitle}}</title>
+  <title>Remote Jobs - noOfficeNeeded</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Post your flexible JavaScript related jobs on No Office Needed free of charge today">
