Changed - to : on client side job-posting page

--- a/client/job-posting.html
+++ b/client/job-posting.html
@@ -1,7 +1,7 @@
 <template name="jobPosting">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h4>{{name}} is looking for a {{title}} - {{salary}}</h4>
+      <h4>{{name}} is looking for a {{title}} : {{salary}}</h4>
       <small>Posted: {{createdAt}}</small>
     </div>
     <div class="panel-body">
