Changes made to expiry date
- Dates for "createdAt" and "expiredAt" in DB are now stored in
milliseconds since midnight of January 1, 1970 UTC
- Added a global helper to format milliseconds to human readable format
for site.
- Removed "server\addDays.js" no longer needed.
- Posts that expired will no longer show on site after 31 days from
posting, but will remain in DB until removed.

--- a/client/job-posting.html
+++ b/client/job-posting.html
@@ -2,7 +2,7 @@
   <div class="panel panel-primary">
     <div class="panel-heading">
       <h4>{{name}} is looking for a {{title}} : {{salary}}</h4>
-      <small>Posted: {{createdAt}}</small>
+      <small>Posted: {{fmtDate createdAt}}</small>
     </div>
     <div class="panel-body">
       <h5>Here's what the job is like:</h5>
