--- a/client/listByCategory.html
+++ b/client/listByCategory.html
@@ -4,7 +4,7 @@
     <ul class="list-group">
       {{#each jobs}}
         <li class="list-group-item">
-          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}">See more</a>
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{fmtDate createdAt}} | <a href="/post/{{_id}}">See more</a>
         </li>
       {{/each}}
     </ul>
