adding less function for box shadow

--- a/client/job-posting.html
+++ b/client/job-posting.html
@@ -47,10 +47,10 @@
               <li><i class="fa fa-money"></i>{{salary}}</li>
         </ul>
 
-        <div>{{description}}</div>
+        <div>{{{description}}}</div>
 
         <h4>What we are looking for:</h4>
-        <p>{{requirements}}</p>
+        <p>{{{requirements}}}</p>
 
     </div>
   </div>
