--- a/jboard.html
+++ b/jboard.html
@@ -7,7 +7,7 @@
   <meta name="fragment" content="!">
   <link href="/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="/fonts.min.css" rel="stylesheet" type="text/css">
-
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
