--- a/client/create-posting.html
+++ b/client/create-posting.html
@@ -26,6 +26,12 @@
           <span class="ql-format-separator"></span>
           <span title="Underline" class="ql-format-button ql-underline"></span>
         </span>
+        <span class="ql-format-group">
+          <span title="List" class="ql-format-button ql-list"></span>
+          <span class="ql-format-separator"></span>
+          <span title="Bullet" class="ql-format-button ql-bullet"></span>
+       </span>
+
       </div>
 
       <div id="editor-one"></div>
