Updating hero image and adding preview template

--- a/client/job-posting.html
+++ b/client/job-posting.html
@@ -64,4 +64,18 @@
     </div>
   </div>
 
+  <div class="row">
+    <p>
+      <a class="btn btn-lg btn-primary create-posting-link"
+      href="/create-posting"
+      role="button">Edit Posting
+    </a>
+      <a class="btn btn-lg btn-primary create-posting-link"
+      href="/create-posting"
+      role="button">Submit Posting
+    </a>
+  </p>
+
+  </div>
+
 </template>
