--- a/client/create-posting.html
+++ b/client/create-posting.html
@@ -1,78 +1,80 @@
 <template name="createPosting">
-  <h2 class="text-center">Creating a job posting is easy!</h2>
-  <form class="create-posting-form">
-    <label>Job Title</label>
-    <input name="title" type="text" class="form-control" placeholder="Job Title" required /><br>
-    <label>Job Description</label>
-    <div class="wrapper">
-      <div id="toolbar-one">
-        <span class="ql-format-group">
-          <select title="Font" class="ql-font">
-            <option value="sans-serif" selected="">Sans Serif</option>
-            <option value="serif">Serif</option>
-            <option value="monospace">Monospace</option>
-          </select>
-          <select title="Size" class="ql-size">
-            <option value="10px">Small</option>
-            <option value="13px" selected="">Normal</option>
-            <option value="18px">Large</option>
-            <option value="32px">Huge</option>
-          </select>
-        </span>
-        <span class="ql-format-group">
-          <span title="Bold" class="ql-format-button ql-bold"></span>
-          <span class="ql-format-separator"></span>
-          <span title="Italic" class="ql-format-button ql-italic"></span>
-          <span class="ql-format-separator"></span>
-          <span title="Underline" class="ql-format-button ql-underline"></span>
-        </span>
-        <span class="ql-format-group">
-          <span title="List" class="ql-format-button ql-list"></span>
-          <span class="ql-format-separator"></span>
-          <span title="Bullet" class="ql-format-button ql-bullet"></span>
-       </span>
+  <div class="container">
+    <h2 class="text-center">Creating a job posting is easy!</h2>
+    <form class="create-posting-form">
+      <label>Job Title</label>
+      <input name="title" type="text" class="form-control" placeholder="Job Title" required /><br>
+      <label>Job Description</label>
+      <div class="wrapper">
+        <div id="toolbar-one">
+          <span class="ql-format-group">
+            <select title="Font" class="ql-font">
+              <option value="sans-serif" selected="">Sans Serif</option>
+              <option value="serif">Serif</option>
+              <option value="monospace">Monospace</option>
+            </select>
+            <select title="Size" class="ql-size">
+              <option value="10px">Small</option>
+              <option value="13px" selected="">Normal</option>
+              <option value="18px">Large</option>
+              <option value="32px">Huge</option>
+            </select>
+          </span>
+          <span class="ql-format-group">
+            <span title="Bold" class="ql-format-button ql-bold"></span>
+            <span class="ql-format-separator"></span>
+            <span title="Italic" class="ql-format-button ql-italic"></span>
+            <span class="ql-format-separator"></span>
+            <span title="Underline" class="ql-format-button ql-underline"></span>
+          </span>
+          <span class="ql-format-group">
+            <span title="List" class="ql-format-button ql-list"></span>
+            <span class="ql-format-separator"></span>
+            <span title="Bullet" class="ql-format-button ql-bullet"></span>
+          </span>
 
-      </div>
+        </div>
 
-      <div id="editor-one"></div>
-    </div><br> <!--// end text editor -->
-    <input type="hidden" name="description" value="" />
-    <label>Schedule</label>
-    <select name="schedule" class="form-control">
+        <div id="editor-one"></div>
+      </div><br> <!--// end text editor -->
+      <input type="hidden" name="description" value="" />
+      <label>Schedule</label>
+        <select name="schedule" class="form-control">
           <option value="full-time">Full-time</option>
           <option value="part-time">Part-time</option>
-    </select><br>
-    <label>Salary</label>
-    <select name="salary" class="form-control">
-      <option value="$40k - $65k">$40k - $65k</option>
-      <option value="$65k - $90k">$65k - $90k</option>
-      <option value="$90k - $120k">$90k - $120k</option>
-      <option value="$120k - $150k">$120k - $150k</option>
-      <option value="$150k - $200k">$150k - $200k</option>
-    </select><br>
-    <label>Category</label>
-    <select name="category" class="form-control">
-      <option value="front_end_jobs">Front-end JavaScript</option>
-      <option value="back_end_jobs">Back-end JavaScript</option>
-      <option value="fullstack_jobs">Isomorphic JavaScript</option>
-      <option value="miscellaneous_jobs">Miscellaneous</option>
-      <option value="design_jobs">Design</option>
-      <option value="sales_marketing_jobs">Sales/Marketing</option>
-      <option value="help_desk_support_jobs">Help Desk/Support</option>
-      <option value="system_admin_jobs">System Admin</option>
-    </select><br>
-    <label>Company Name</label>
-    <input name="company" type="text" class="form-control" placeholder="Company Name"  required /><br>
-    <label>Company Headquarters</label>
-    <input name="headquarters" type="text" class="form-control" placeholder="Company Headquarters"  required /><br>
-    <label>Company Email</label>
-    <input name="email" type="email" class="form-control" placeholder="Company Email"  required /><br>
-    <label>Company Website</label>
-    <input name="website" type="text" class="form-control" placeholder="Company Website"  required /><br>
-    <button class="btn btn-primary" type="submit">Post now!</button>
-  </form>
-  <div class="alert alert-success status-notification" role="alert">
-    <p>Your posting has been created!</p>
+        </select><br>
+        <label>Salary</label>
+        <select name="salary" class="form-control">
+          <option value="$40k - $65k">$40k - $65k</option>
+          <option value="$65k - $90k">$65k - $90k</option>
+          <option value="$90k - $120k">$90k - $120k</option>
+          <option value="$120k - $150k">$120k - $150k</option>
+          <option value="$150k - $200k">$150k - $200k</option>
+        </select><br>
+        <label>Category</label>
+        <select name="category" class="form-control">
+          <option value="front_end_jobs">Front-end JavaScript</option>
+          <option value="back_end_jobs">Back-end JavaScript</option>
+          <option value="fullstack_jobs">Isomorphic JavaScript</option>
+          <option value="miscellaneous_jobs">Miscellaneous</option>
+          <option value="design_jobs">Design</option>
+          <option value="sales_marketing_jobs">Sales/Marketing</option>
+          <option value="help_desk_support_jobs">Help Desk/Support</option>
+          <option value="system_admin_jobs">System Admin</option>
+        </select><br>
+        <label>Company Name</label>
+        <input name="company" type="text" class="form-control" placeholder="Company Name"  required /><br>
+        <label>Company Headquarters</label>
+        <input name="headquarters" type="text" class="form-control" placeholder="Company Headquarters"  required /><br>
+        <label>Company Email</label>
+        <input name="email" type="email" class="form-control" placeholder="Company Email"  required /><br>
+        <label>Company Website</label>
+        <input name="website" type="text" class="form-control" placeholder="Company Website"  required /><br>
+        <button class="btn btn-primary" type="submit">Post now!</button>
+      </form>
+      <div class="alert alert-success status-notification" role="alert">
+        <p>Your posting has been created!</p>
+      </div>
+      <a href="/">Return to homepage</a>
   </div>
-  <a href="/">Return to homepage</a>
 </template>
