Changing salary dropdown values

--- a/client/create-posting.html
+++ b/client/create-posting.html
@@ -47,7 +47,7 @@
         <select name="salary" class="form-control">
           <option value="40K-65K">$40K - $65K</option>
           <option value="65K-90K">$65K - $90K</option>
-          <option value="90K-120K">$90K - $120k</option>
+          <option value="90K-120K">$90K - $120K</option>
           <option value="120K-150K">$120K - $150K</option>
           <option value="150K-200K">$150K - $200K</option>
         </select><br>
