--- a/client/listByCategory.html
+++ b/client/listByCategory.html
@@ -3,9 +3,11 @@
       <h2>{{category}}</h2>
       <ul class="list-group">
         {{#each jobs}}
+        <a href="/post/{{_id}}">
           <li class="list-group-item">
-            <strong>{{name}}</strong> - <u>{{title}}</u> - {{fmtDate createdAt}} | <a href="/post/{{_id}}">See more</a>
+            <strong>{{name}}</strong> - <u>{{title}}</u> - {{fmtDate createdAt}}
           </li>
+        </a>
         {{/each}}
       </ul>
     </div>
