fix 404 page layout + update content + fix onBeforeAction logic for listByCategory

--- a/client/404.html
+++ b/client/404.html
@@ -1,5 +1,5 @@
 <template name="404">
-  <div class="well">
-    <h2>It appears you're lost</h2>
+  <div class="container">
+    <h2>No jobs here! Try another page or <a href="/"><u>post one</u></a>.</h2>
   </div>
 </template>
