--- a/client/404.html
+++ b/client/404.html
@@ -1,5 +1,5 @@
 <template name="404">
   <div class="container">
-    <h2>No jobs here! Try another page or <a href="/"><u>post one</u></a>.</h2>
+    <h2>No jobs here! Try another page or <a href="/create-posting"><u>post one</u></a>.</h2>
   </div>
 </template>
