--- a/client/create-posting.html
+++ b/client/create-posting.html
@@ -53,14 +53,14 @@
         </select><br>
         <label>Category</label>
         <select name="category" class="form-control">
-          <option value="front_end_jobs">Front-End</option>
-          <option value="back_end_jobs">Back-End</option>
-          <option value="fullstack_jobs">Full Stack</option>
-          <option value="miscellaneous_jobs">Miscellaneous</option>
-          <option value="design_jobs">Design</option>
-          <option value="sales_marketing_jobs">Sales/Marketing</option>
-          <option value="help_desk_support_jobs">Help Desk/Support</option>
-          <option value="system_admin_jobs">System Admin</option>
+          <option value="front-end-jobs">Front-End</option>
+          <option value="back-end-jobs">Back-End</option>
+          <option value="fullstack-jobs">Full Stack</option>
+          <option value="miscellaneous-jobs">Miscellaneous</option>
+          <option value="design-jobs">Design</option>
+          <option value="sales-marketing-jobs">Sales/Marketing</option>
+          <option value="help-desk-support-jobs">Help Desk/Support</option>
+          <option value="system-admin-jobs">System Admin</option>
         </select><br>
         <label>Company Name</label>
         <input name="company" type="text" class="form-control" placeholder="Company Name"  required value="{{name}}" /><br>
